# euler-ai

./: .gitignore  CNAME  README.md
chat/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
chat/src/chat/: __init__.py  gunicorn.conf.py  main.py
chat/src/chat/api/: chat.py
chat/src/chat/core/: config.py
chat/src/chat/schemas/: chat.py
chat/src/chat/services/: chat_service.py
docs/: .gitignore  CNAME  README.md  _config.yml  index.html  search.json
docs/_includes/: footer.html  header.html
docs/_layouts/: default.html  post.html
docs/_posts/: 2026-03-25-welcome.md
docs/assets/css/: style.css
docs/assets/js/: search.js
