[project]
name = "chat"
version = "0.1.0"
description = "A streaming chat API built with LangChain + FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat"]

[dependency-groups]
dev = [
    "hatchling>=1.21.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
chat = "chat.main:main"
